fix overflow auto bug

--- a/src/components/OperatorStats.css
+++ b/src/components/OperatorStats.css
@@ -46,6 +46,7 @@
 
 .operatorCard {
     background-color: lightgrey;
+    margin: 2px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -67,7 +68,6 @@
     height: 420px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     overflow: auto;
 }
 
